# python-projects-hub

./: pyproject.toml  starter_template.py
Basics/Textual/: template.py
Basics/argparse/: bulk-file-renamer.py  file_encryptor.py  pomodor_timer.py
Basics/click/: template.py
web/fastapi/simple-crud-auth/: auth.py  main.py  models.py  pyproject.toml  schemas.py  sql_app.db
web/fastapi/simple-crud-auth/migrations/: env.py
web/fastapi/simple-crud-auth/migrations/versions/: df383c1516c5_initial_migration.py
