[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.2",
    "click>=8.3.1",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-filter>=25.2",
    "djangorestframework>=3.17.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "keras>=3.13.2",
    "kivy[full]>=2.3.1",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "llama-index>=0.14.18",
    "markdown>=3.10.2",
    "marshmallow>=3.26.2",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "polars>=1.39.2",
    "psutil>=7.2.2",
    "pydantic-ai>=1.70.0",
    "pygame>=2.6.1",
    "pypdf>=6.9.1",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.2",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "rfdetr>=1.3.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scrapy>=2.14.2",
    "sqlmodel>=0.0.37",
    "supervision>=0.27.0.post2",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "trackers>=2.3.0",
    "twisted>=25.5.0",
    "ultralytics>=8.4.24",
    "vidgear[asyncio]>=0.3.4",
]
